3.5.0/_sources/gallery/lines_bars_and_markers/xcorr_acorr_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/xcorr_acorr_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_xcorr_acorr_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_xcorr_acorr_demo.py:


================================
Cross- and Auto-Correlation Demo
================================

Example use of cross-correlation (`~.Axes.xcorr`) and auto-correlation
(`~.Axes.acorr`) plots.

.. GENERATED FROM PYTHON SOURCE LINES 9-27

.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np


    # Fixing random state for reproducibility
    np.random.seed(19680801)


    x, y = np.random.randn(2, 100)
    fig, [ax1, ax2] = plt.subplots(2, 1, sharex=True)
    ax1.xcorr(x, y, usevlines=True, maxlags=50, normed=True, lw=2)
    ax1.grid(True)

    ax2.acorr(x, usevlines=True, normed=True, maxlags=50, lw=2)
    ax2.grid(True)

    plt.show()




.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_xcorr_acorr_demo_001.png
   :alt: xcorr acorr demo
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_xcorr_acorr_demo_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_xcorr_acorr_demo_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 28-35

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.acorr` / `matplotlib.pyplot.acorr`
   - `matplotlib.axes.Axes.xcorr` / `matplotlib.pyplot.xcorr`


.. _sphx_glr_download_gallery_lines_bars_and_markers_xcorr_acorr_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: xcorr_acorr_demo.py <xcorr_acorr_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: xcorr_acorr_demo.ipynb <xcorr_acorr_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
